Bug 475973 - Canvas-only mode not properly hiding menu bar
Summary: Canvas-only mode not properly hiding menu bar
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-10-22 16:06 UTC by Alvin Wong
Modified: 2023-11-05 16:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
workspace to reproduce the bug (8.59 KB, text/plain)
2023-11-04 17:43 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2023-10-22 16:06:34 UTC
SUMMARY
When entering canvas-only mode, the menu items are hidden, but menu bar itself still remain visible.


STEPS TO REPRODUCE
1. Check in settings that the menu bar is set to be hidden in canvas-only mode.
2. Toggle canvas-only mode on.
3. If menu bar is hidden, toggle canvas-only mode off and on again.

OBSERVED RESULT
The menu bar is visible without any items in it.

EXPECTED RESULT
The menu bar should be hidden.

SOFTWARE/OS VERSIONS
Windows: 10
Nightly git 4184632
Comment 1 Alvin Wong 2023-11-04 17:43:51 UTC
Created attachment 162863 [details]
workspace to reproduce the bug

I found that it only happens with this workspace active.

This does not happen in both 5.2.0 and 5.2.1, so it is a regression on master.
Comment 2 Dmitry Kazakov 2023-11-05 13:15:35 UTC
I can confirm the issue
Comment 3 Dmitry Kazakov 2023-11-05 16:09:54 UTC
Git commit e6bc1632bccb90f4410e3186d427f5bdaf97edf7 by Dmitry Kazakov.
Committed on 05/11/2023 at 17:09.
Pushed by dkazakov into branch 'master'.

Fix menu bar hiding in the canvas-only mode

M  +12   -1    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/-/commit/e6bc1632bccb90f4410e3186d427f5bdaf97edf7