Fix menu bar hiding in the canvas-only mode

BUG:475973